# dead-reckoning

./: .env.example  .gitignore  ARCHITECTURE.md  DEMO.md  DEMO_SCRIPT.md  DEVELOPMENT.md  LICENSE  README.md  pyproject.toml
.streamlit/: config.toml
agent/: graph.py  ingest_graph.py  state.py  tools.py
demo/: DEMO_RUNBOOK.md  DEMO_SCRIPT.md  seed_demo.py
docs/: DEMO.md
ingestion/: apply_schema.py  diff.py  enricher.py  github.py  loader.py  parser.py  schema.surql  seed.py  snapshot.py
tests/: test_parser.py  test_tools.py
tests/fixtures/sample_repo/v1/: main.py  models.py  utils.py
tests/fixtures/sample_repo/v2/: api.py  config.py  utils.py
ui/: app.py
